Fix bugs + locate engine button